VA-1172 Fix fullscreen navbar and text padding (#224)
* VA-1172 Fix fullscreen navbar and text padding

* VA-1172 Fix scrollbar

* VA-1172 Clean code

* Summary page design is fixed

* VA-1172 summary page decisions have been applied

* VA-1172 Summary page is completed

* VA-1172 scroll to top for FS is done

* VA-1172 Width of vab bar is fixed

* Removed the ghost box from behind the footer

* VA-1172 removed margin from top and bottom from content

* VA-1172 Added margin to bottom of the summary button

---------

--- a/src/styles/_navigationbar.scss
+++ b/src/styles/_navigationbar.scss
@@ -24,13 +24,6 @@
     opacity: 0;
     transition: opacity .05s linear;
   }
-
-  .large-navigation-list {
-    height: 0;
-    overflow-y: auto;
-    flex: 1 1 auto;
-    min-height: 58em;
-  }
 }
 
 .h5p-interactive-book-navigation-sectionlist {
@@ -108,7 +101,7 @@
 
 .h5p-theme-show-results.h5p-interactive-book-navigation-chapter-button {
   width: 100%;
-  margin-top: var(--h5p-theme-spacing-s);
+  margin: var(--h5p-theme-spacing-s) 0;
 }
 
 .h5p-interactive-book-navigation-chapter-button {
