--- a/src/styles/_pagecontent.scss
+++ b/src/styles/_pagecontent.scss
@@ -32,7 +32,7 @@
 }
 
 .h5p-interactive-book-content {
-  margin: var(--h5p-theme-spacing-s) var(--h5p-theme-spacing-xl) var(--h5p-theme-spacing-xl);
+  margin: var(--h5p-theme-spacing-s);
   position: relative;
   width: 100%;
 
@@ -46,10 +46,6 @@
 
     &:first-child {
       margin-top: 0;
-
-      &> p {
-        margin-top: 0;
-      }
     }
   }
 }
