--- a/src/styles/_summary.scss
+++ b/src/styles/_summary.scss
@@ -59,11 +59,7 @@
     justify-content: space-between;
     gap: 1rem;
     color: #273C59;
-    margin-top: calc(-1 * var(--h5p-theme-spacing-xl)*2);
-    position: sticky;
-    top: calc(var(--h5p-theme-spacing-xl)*2);
-    z-index: 151; // Ensure it is above the header
-
+    
     .h5p-interactive-book-summary-progress-container {
       background-color: var(--h5p-theme-ui-base);
       box-shadow: 10px 10px 20px 5px rgba(0, 0, 0, 0.08);
@@ -416,7 +412,6 @@
 
 .h5p-showing-summary.h5p-showing-summary .h5p-interactive-book-status:not(.h5p-interactive-book-status-footer) .h5p-interactive-book-status-main .h5p-interactive-book-status-info .h5p-interactive-book-status-chapter .title {
   color: var(--h5p-theme-contrast-cta) !important;
-  font-size: var(--h5p-theme-font-size-xxl);
 }
 
 .h5p-showing-summary.h5p-showing-summary .h5p-interactive-book-status:not(.h5p-interactive-book-status-footer) .h5p-interactive-book-status-main .h5p-theme-progress {
@@ -438,20 +433,6 @@
   }
   .h5p-interactive-box-summary-progress {
     flex-direction: column;
-  }
-}
-
-/* Only apply fade transitions when container >= 1030px */
-@container interactive-book (min-width: 1030px) {
-  .h5p-fullscreen .h5p-interactive-box-summary-progress {
-    &.fade-in {
-      opacity: 1;
-      transition: opacity 0.2s ease-in;
-    }
-    &.fade-out {
-      opacity: 0;
-      transition: opacity 0.2s ease-out;
-    }
   }
 }
 
